5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1716_2503.log
== TEST (2019-05-14 17:59:13) 
-- CODE:
n = int(input("DN:"))
pi = 0
while(n >= 1):
	if ((n % 2) == 1
		 pi = pi + (4/(2*n - 1))  
		
	else:
		 pi = pi - (4/(2*n-1))
	n = n-1
print(round(pi , 8))		 
	
	
		
-- ERROR:
File "XXXX", line 5
    pi = pi + (4/(2*n - 1))  
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:59:20) 
-- CODE:
n = int(input("DN:"))
pi = 0
while(n >= 1):
	if ((n % 2) == 1:
		 pi = pi + (4/(2*n - 1))  
		
	else:
		 pi = pi - (4/(2*n-1))
	n = n-1
print(round(pi , 8))		 
	
	
		
-- ERROR:
File "XXXX", line 4
    if ((n % 2) == 1:
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:59:26) 
-- CODE:
n = int(input("DN:"))
pi = 0
while(n >= 1):
	if ((n % 2) == 1):
		 pi = pi + (4/(2*n - 1))  
		
	else:
		 pi = pi - (4/(2*n-1))
	n = n-1
print(round(pi , 8))		 
	
	
		
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:59:31) 
-- CODE:
n = int(input("DN:"))
pi = 0
while(n >= 1):
	if ((n % 2) == 1):
		 pi = pi + (4/(2*n - 1))  
		
	else:
		 pi = pi - (4/(2*n-1))
	n = n-1
print(round(pi , 8))		 
	
	
		
-- EXECUTION TIME:
0.14643
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
